@@ -1,23 +1,6 @@
 /*
- * JBoss, Home of Professional Open Source.
- * Copyright 2014, Red Hat, Inc., and individual contributors
- * as indicated by the @author tags. See the copyright.txt file in the
- * distribution for a full listing of individual contributors.
- *
- * This is free software; you can redistribute it and/or modify it
- * under the terms of the GNU Lesser General Public License as
- * published by the Free Software Foundation; either version 2.1 of
- * the License, or (at your option) any later version.
- *
- * This software is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this software; if not, write to the Free
- * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
- * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+ * Copyright The WildFly Authors
+ * SPDX-License-Identifier: Apache-2.0
  */
 
 package org.wildfly.core.launcher;
@@ -46,7 +29,10 @@ abstract class AbstractCommandBuilder<T extends AbstractCommandBuilder<T>> imple
     static final String SECURITY_MANAGER_PROP = "java.security.manager";
     static final String SECURITY_MANAGER_PROP_WITH_ALLOW_VALUE = "-D" + SECURITY_MANAGER_PROP + "=" + ALLOW_VALUE;
     static final String[] DEFAULT_VM_ARGUMENTS;
+    /** Packages being exported or opened are available on all JVMs */
     static final Collection<String> DEFAULT_MODULAR_VM_ARGUMENTS;
+    /** Packages being exported or opened may not be available on all JVMs */
+    static final Collection<String> OPTIONAL_DEFAULT_MODULAR_VM_ARGUMENTS;
 
     static {
         // Default JVM parameters for all versions
@@ -62,7 +48,8 @@ abstract class AbstractCommandBuilder<T extends AbstractCommandBuilder<T>> imple
         // Additions to these should include good explanations why in the relevant JIRA
         // Keep them alphabetical to avoid the code history getting confused by reordering commits
         final ArrayList<String> modularJavaOpts = new ArrayList<>();
-        if (!Boolean.parseBoolean(System.getProperty("launcher.skip.jpms.properties", "false"))) {
+        final boolean skipJPMSOptions = Boolean.getBoolean("launcher.skip.jpms.properties");
+        if (!skipJPMSOptions) {
             modularJavaOpts.add("--add-exports=java.desktop/sun.awt=ALL-UNNAMED");
             modularJavaOpts.add("--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED");
             modularJavaOpts.add("--add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED");
@@ -72,6 +59,7 @@ abstract class AbstractCommandBuilder<T extends AbstractCommandBuilder<T>> imple
             modularJavaOpts.add("--add-opens=java.base/java.lang.invoke=ALL-UNNAMED");
             modularJavaOpts.add("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED");
             modularJavaOpts.add("--add-opens=java.base/java.io=ALL-UNNAMED");
+            modularJavaOpts.add("--add-opens=java.base/java.net=ALL-UNNAMED");
             modularJavaOpts.add("--add-opens=java.base/java.security=ALL-UNNAMED");
             modularJavaOpts.add("--add-opens=java.base/java.util=ALL-UNNAMED");
             modularJavaOpts.add("--add-opens=java.base/java.util.concurrent=ALL-UNNAMED");
@@ -82,6 +70,12 @@ abstract class AbstractCommandBuilder<T extends AbstractCommandBuilder<T>> imple
             modularJavaOpts.add("--add-modules=java.se");
         }
         DEFAULT_MODULAR_VM_ARGUMENTS = Collections.unmodifiableList(modularJavaOpts);
+
+        final ArrayList<String> optionalModularJavaOpts = new ArrayList<>();
+        if (!skipJPMSOptions) {
+            optionalModularJavaOpts.add("--add-opens=java.base/com.sun.net.ssl.internal.ssl=ALL-UNNAMED");
+        }
+        OPTIONAL_DEFAULT_MODULAR_VM_ARGUMENTS = Collections.unmodifiableList(optionalModularJavaOpts);
     }
 
     protected final Environment environment;
